crates/reinhardt-core/macros/tests/ui/settings/fail/settings_flatten.rs
use reinhardt_macros::settings;

#[settings(fragment = true, section = "bad")]
struct BadSettings {
	#[serde(flatten)]
	pub nested: NestedSettings,
}

struct NestedSettings {
	pub value: String,
}

fn main() {}
